# tradly

./: .gitignore  DATA_CONTRACT_V1.md  EXECUTION_PRIORITY_V1.md  INVESTABILITY_POLICY_V1.md  MODELING_V0.md  README.md  TRADING_GUARDRAILS_V1.md  TRADING_SPEC_V1.md  UNIVERSE_V1.md  pyproject.toml
dashboard/: app.py
db/: schema_v1.sql
docs/: API_USAGE_RUNBOOK.md  DATA_GAPS_AND_UPGRADE_PATH.md  DELAYED_TO_REALTIME_COMPATIBILITY_PLAN.md  ENSEMBLE_V1.md  FRESHNESS_SESSION_POLICY_V1.md  HORIZON_ACTIONABILITY_V1.md  HORIZON_LANES_V1.md  IMPLEMENTATION_AUDIT_WORKFLOW.md  MARKET_BARS_1M_WATERMARK_PLAN_V1.md  MARKET_DATA_LATENCY_POLICY.md  MARKET_REGIME_INTRADAY_PLAN_V1.md  MARKET_REGIME_MACRO_HOSTILITY_PLAN_V1.md  MASSIVE_STOCKS_DB_CONTRACT_V1.md  MODELING_FRAMEWORK_V1.md  OPS_CADENCE_SESSION_2026-03-16.md  OPS_RUNBOOK_V1.md  REFRESH_RELIABILITY_CONTRACT_V1.md  SYMBOL_MOVEMENT_INTRADAY_PLAN_V1.md  SYSTEM_COMPONENT_TRUST_AND_OBSERVABILITY_AUDIT.md  TRADING_CALENDAR_CONTEXT_V1.md  system_architecture_v1.html
scripts/: init_duckdb.py
tests/: test_artifact_alignment.py  test_audit_and_models.py  test_calibration_and_market_regime.py  test_cycle.py  test_dashboard_decisions.py  test_dashboard_run_loading.py  test_dashboard_state.py  test_ensemble.py  test_event_price_context.py  test_event_risk.py  test_event_window.py  test_freshness_gate.py  test_freshness_snapshot.py  test_ingest_market_bars.py  test_ingest_market_bars_1m.py  test_ingest_market_snapshots.py  test_ingest_news_budgeted.py  test_interpret_news_contract.py  test_investability_gate.py  test_market_calendar.py  (+25 more)
(+114 files in other folders)
